# sudoku

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
Qt-sudoku-app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Qt-sudoku-app/LoginDialog/: logindialog.cpp  logindialog.ui
client/model-views/: viewmodel.cpp  viewmodel.h
client/models/: Enums.h
client/views/MainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
models/: Cell.h  Enums.h  Game.cpp  Game.h  cell.cpp  cell.h  game.cpp  game.h  user.cpp  user.h
models/commands/: enternumber.cpp  enternumber.h  enternumberinnotemode.cpp  enternumberinnotemode.h  erasenumber.cpp  erasenumber.h
server/: CMakeLists.txt  export_data.json  import_data.json  main.cpp  resources.qrc  server.cpp  server.h
view-model/: viewmodel.cpp  viewmodel.h
view-models/: clientviewmodel.cpp  clientviewmodel.h  serverviewmodel.cpp  serverviewmodel.h
views/: CustomButton.qml  CustomPopup.qml  DataChangeWindow.qml  DifficultyLevelWindow.qml  ExitWindow.qml  GameCellButton.qml  GameWindow.qml  LeaderboardWindow.qml  LoginWindow.qml  MainWindow.qml  SettingsWindow.qml  SudokuGeniusLabel.qml  SudokuGrid.qml
views/DifficultyLevelDialog/: difficultyleveldialog.cpp  difficultyleveldialog.h  difficultyleveldialog.ui
views/GameWindow/: gamewindow.cpp  gamewindow.h  gamewindow.ui
views/LoginDialog/: logindialog.cpp  logindialog.h  logindialog.ui
views/MainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.txt  resource.qrc
views/images/: CustomButton.qml
